# python-uv-template

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secretlintignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.claude.auth.yml  compose.claude.yml  compose.dev.yml  compose.yml  example.env  pyproject.toml
.devcontainer/: README.md  codex-config.toml  compose.yaml  compose.yml  devcontainer-lock.json  devcontainer.json  hermes-config.yaml  initialize.sh  pass-relogin  post-create.sh  post-start.sh
.devcontainer/claude/: Dockerfile  devcontainer.json  entrypoint.sh  init-firewall.sh
.devcontainer/claude-open/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  enhancement.md  feature.yml  task.md  task.yml
.github/scripts/: sync-labels.sh
.github/workflows/: ci.yml  label_pr.yml  labels.yml  lint.yml  lint_docker.yml  lint_gha.yml  sbom.yml  security.yml  test.yml
agent/plans/: 20250414_update_python_version_plan.md  20250414_update_readme_plan.md
agent/prompts/: 20250414_update_python_version.md  20250414_update_readme.md
claude/: Dockerfile  README.md  entrypoint.sh  init-firewall.sh
docs/agents/: 20250414_update_python_version_plan.md  20250414_update_readme_plan.md
docs/knowledge/: index.md  log.md
docs/knowledge/adr/: 0001-sample-decision.md  index.md
docs/knowledge/architecture/: index.md  sample-service-overview.md
docs/knowledge/conventions/: index.md  sample-convention.md
docs/knowledge/research/: index.md  sample-research.md
docs/knowledge/runbooks/: index.md  sample-runbook.md
docs/plans/: 20250629_dependabot_fix.md
myapp/tests/: main_test.py
scripts/: claude-start.sh
src/: main.py
src/tests/: main_test.py
